# MTG-Deck

./: .gitignore  README_TESTING.md  UI_CONTRACT_v1.md  launch_desktop.cmd  launch_dev.cmd  launch_dev.py  launch_prod.cmd  launch_prod.py  requirements-dev.txt  requirements.txt
api/: main.py
desktop/: .gitignore  README.md  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: main.rs
docs/: CHANGELOG.md  CLIENT_LAUNCHER.md  CURATED_PACK_MANIFEST_CONTRACT_V1.md  ENGINE_IMPLEMENTATION_PLAN_V1.md  ENGINE_TASK_INVENTORY_V1.md  SUFFICIENCY_SPEC_V1.md
engine/: __init__.py  build_context.py  canonical.py  cards_db.py  db.py  db_tags.py  determinism.py  game_changers.py  image_cache_contract.py  rules_db.py
schemas/: schema.sql
scripts/: Run MTG Engine Client.bat  build_primitive_tag_index_v0.py  check_syntax.ps1  check_syntax.py  import_rules_cr_docx.py  inspect_snapshot_tags.py  run_client.ps1  run_tests.ps1
snapshot_build/: __init__.py  enrich_images_from_scryfall_bulk.py  enrich_snapshot_images.py  index_build.py  migrate_card_images_table.py  migrate_cards_image_columns.py  patch_apply.py  prefetch_card_images.py  tag_coverage_audit_v1.py  tag_import_v1.py  tag_snapshot.py  unknowns_queue.py
taxonomy/: README.md  __init__.py  exporter.py  loader.py  pack_manifest.py  schema.py  taxonomy_pack_v1.py
taxonomy_source/: MTG_Tag_Taxonomy_v1_23_full.xlsx
tests/: conftest.py  decklist_fixture_harness.py  guardrails_fixture_harness.py  test_available_panels_v1.py  test_db_harness.py  (+107 more)
(+275 files in other folders)
