[package]
name = "mtg_engine_desktop"
version = "0.1.0"
description = "Desktop wrapper for MTG Engine production serve mode"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
strip = true
